@startuml
class Application{
    +main()
}
interface AccountService{
    +createAccount()
    +deposit()
    +withdrow()
    +transferFunds()
    +getAllAccounts()
    +getAccount()
}
class AccountDao{
    +saveAccount()
    +updateAccount()
    +loadAccount()
    +getAccounts()
}
class Account{
    +accountNumber
    +interestAdder
    +coulculateInterest
}
class Customer {
    +name
}

class AccountEntry {
    +date
    +amount
    +description
    +fromAccountNumber
    +fromPersonName
}

Application --> AccountService
AccountService --> AccountDao
AccountService ..> Account
Account --> Customer : belongs
Account *- AccountEntry: has *


class Logger{}
class SMSSender{}
class EmailSender{}

interface StateNotificator {
    +register()
    +remove()
    +notify()
}
interface Observer{
   +update()
}
Logger ..|> Observer
EmailSender ..|> Observer
SMSSender ..|> Observer
AccountService ..|> StateNotificator
Observer --> StateNotificator
@enduml